Fixed issue with sticky nav so that it no longer tucks under the header. Fixed top alignment of nav and main content columns. Added jquery checks for affix code. Split affix calls for landing and detail page.

--- a/_includes/css/commonstyles.less
+++ b/_includes/css/commonstyles.less
@@ -56,12 +56,15 @@ h3 {
 	font-size:16px;
 }
 
+.main-content{
+	margin:63px 0 0 0;
+}
+
 .banner {
 	background:#006093;
 }
 
 .subnav {
-	margin:0;
 	padding:0;
 	list-style-type:none;
 
@@ -259,8 +262,6 @@ legend{
 	margin:0;
 }
 
-.adjust-margin-top { margin-top:28px; }
-
-@media (min-width: @screen-sm-min) {
-	.banner { margin-bottom:35px; }
+.adjust-margin-top { 
+	margin-top:28px; 
 }
