--- a/_includes/css/landing-page.less
+++ b/_includes/css/landing-page.less
@@ -1,8 +1,16 @@
 #landing-page {
+	.container{
+		.col-sm-3{
+			padding-top:20px;
+		}
+
+		.col-sm-9{
+			padding-top:35px;
+		}
+	}
 
 	padding-bottom:90px;
 	img { margin-top:36px; width: 100%; }
-
 }
 
 .landing-page-title {
